# VM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  go.work
.github/workflows/: cmake.yml
asm/: CMakeLists.txt  Makefile  assemble.cpp  assemble.hpp  errors.hpp  main.cpp  utils.cpp  utils.hpp
asm/asm/: CMakeLists.txt  assemble.cpp  utils.cpp  utils.hpp
asm/asm/includes/: assemble.hpp
asm/asm/includes/assemble/: assemble.hpp
asm/asmencoder/: CMakeLists.txt  asmencoder.cpp
asm/asmencoder/includes/asmencoder/: asmencoder.hpp  errors.hpp
asm/assembler/: assembler.cpp  assembler.hpp
asm/encoder/: CMakeLists.txt  encoder.cpp
asm/encoder/includes/: encoder.hpp
asm/parser/: CMakeLists.txt  cmd_postfix_parser.cpp  cmd_postfix_parser.hpp  command_parser.cpp  command_parser.hpp  directives.cpp  directives.hpp  errors.cpp  errors.hpp  instr_parser.cpp  instr_parser.hpp  instr_postfix_parser.cpp  instr_postfix_parser.hpp  labels.cpp  labels.hpp  parser.cpp  parser.hpp  section_parser.cpp  section_parser.hpp  symbols.cpp  symbols.hpp  utils.cpp  utils.hpp
asm/parser/includes/: parser.hpp
asm/parser/includes/parser/: errors.hpp  parser.hpp  symtab.hpp
asm/parser/tmpl/: cmdDataPostfixes.inc  jmpTypePostfix.inc
asm/testdata/: code.at  test.code
asm/tokenizer/: CMakeLists.txt  errors.cpp  errors.hpp  tockCheckers.cpp  tockCheckers.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp
asm/tokenizer/includes/: tokenizer.hpp
asm/tokenizer/includes/tokenizer/: errors.hpp  tokenizer.hpp
binformat/: CMakeLists.txt  binformat.cpp  binformat.hpp
cmake/: CompileOptions.cmake  Doxygen.cmake
configs/: MajesticConsoleConf.cmake  RamConf.cmake  RomConf.cmake  VMConf.cmake
ld/: CMakeLists.txt  cmdargs.cpp  cmdargs.hpp  ld.cpp  ld.hpp  link.cpp  link.hpp  main.cpp  utils.cpp  utils.hpp
readobj/: CMakeLists.txt  main.cpp  print_headers.cpp  print_headers.hpp  print_loadable.cpp  print_loadable.hpp  print_relocs.cpp  print_relocs.hpp  print_symtab.cpp  print_symtab.hpp  readobj.cpp  readobj.hpp
server/: CMakeLists.txt  config.go  conn.go  go.mod  main.go  models.go  monitors.go  run.go  runner.go  server.go  server_test.go  socket.go
server/progs/: my_asm  my_ld  my_vm  readobj
server/stdlib/: drawCircle.code  linear.code  printStr.code  quad.code  quadEqSolver.code
server/testdata/: hello.code
testdata/: errtest.code  out  test.code  test2.code  test2link.code
tests/: CMakeLists.txt  decEnc_test.cpp  test.code
tests/consoleTest/: CMakeLists.txt  consTest.go  go.mod  test.code
tests/decEncTest/: CMakeLists.txt  decEnc_test.cpp  test.code  testIns.hpp
tests/end2end/: CMakeLists.txt  console_linked_test.go  console_test.go  graphic_test.go  quadEq_test.go  utils.go
tests/end2end/testdata/: consTest.code  graphicTest.code
tests/end2end/testdata/consTestLinked/: ConsAddrs.code  RWconsChar.code  RWconsDouble.code  RWconsInt.code  main.code
tests/end2end/testdata/quadEq/: linear.code  quad.code  quadEqSolver.code
tests/numConsTest/: CMakeLists.txt  consTest.go  go.mod  test.code
tests/vmTest/: CMakeLists.txt  vm_test.cpp
vm/: CMakeLists.txt  Makefile  main.cpp  vm.cpp  vm.hpp
vm/config/: CMakeLists.txt  config.cpp  config.cpp.in
vm/config/vmconfig/: config.hpp
vm/cpu/: CMakeLists.txt  cpu.hpp  instructions.cpp  instructions.hpp
vm/cpu/includes/: cpu.hpp
vm/devices/: CMakeLists.txt  console.cpp  console.hpp  device.cpp  device.hpp  ram.cpp  ram.hpp  rom.cpp  rom.hpp
vm/devices/includes/: console.hpp  device.hpp  ram.hpp  rom.hpp
vm/instructions/: CMakeLists.txt  argument.cpp  argument.hpp  decode.cpp  decode.hpp  encode.cpp  encode.hpp  instruction.cpp  instruction.hpp  instructions.cpp  instructions.hpp  instructionsMeta.cpp  instructionsMeta.hpp  instructionsMeta.inc  opcodes.hpp  registers.cpp  run.cpp  run.hpp
vm/instructions/decode/: CMakeLists.txt  decode.cpp  decode.hpp
vm/instructions/encode/: CMakeLists.txt  encode.cpp  encode.hpp
vm/instructions/includes/: argument.hpp  instructions.hpp  opcodes.hpp  registers.hpp
vm/instructions/registers/: registers.hpp
vm/instructions/run/: CMakeLists.txt  run.cpp  run.hpp
vm/instructions/tmpl/: instructionsMeta.inc
vm/vm/: CMakeLists.txt  init.cpp  initVM.cpp  loader.cpp  loader.hpp  vm.cpp
vm/vm/includes/: vm.hpp
web/: codeInput.css  codeInput.js  console.css  console.js  general.css  index.html  infoConsole.css  main.js  package.json  screen.js  style.css
